// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleTicketList/> should fetch the tickets on render 1`] = `
Array [
  Array [
    1,
    Object {
      "cursor": undefined,
      "limit": 10,
    },
  ],
]
`;

exports[`<RuleTicketList/> should render the rule ticket list 1`] = `
<div>
  <table
    class="wrapper table"
  >
    <thead>
      <tr>
        <th
          colspan="2"
        >
          ticket information
        </th>
        <th>
          created
        </th>
        <th>
          channel
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="avatar"
        >
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="component"
                style="width: 30px; height: 30px;"
              >
                <div
                  class="initials"
                  style="width: 30px; height: 30px; font-size: 12.5px;"
                >
                  <span
                    style="line-height: 32px;"
                  >
                    AP
                  </span>
                </div>
              </div>
            </div>
          </a>
        </td>
        <td
          class="ticketInfo"
        >
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="ticketSubject"
              >
                Great ticket
              </div>
              <div
                class="ticketDescription"
              />
            </div>
          </a>
        </td>
        <td>
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              31/07/2017
            </div>
          </a>
        </td>
        <td>
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <i
                class="icon d-inline-block material-icons text-secondary"
              >
                email
              </i>
            </div>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<RuleTicketList/> should show navigation if response has cursor 1`] = `
<div>
  <table
    class="wrapper table"
  >
    <thead>
      <tr>
        <th
          colspan="2"
        >
          ticket information
        </th>
        <th>
          created
        </th>
        <th>
          channel
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="avatar"
        >
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="component"
                style="width: 30px; height: 30px;"
              >
                <div
                  class="initials"
                  style="width: 30px; height: 30px; font-size: 12.5px;"
                >
                  <span
                    style="line-height: 32px;"
                  >
                    AP
                  </span>
                </div>
              </div>
            </div>
          </a>
        </td>
        <td
          class="ticketInfo"
        >
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="ticketSubject"
              >
                Great ticket
              </div>
              <div
                class="ticketDescription"
              />
            </div>
          </a>
        </td>
        <td>
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              31/07/2017
            </div>
          </a>
        </td>
        <td>
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <i
                class="icon d-inline-block material-icons text-secondary"
              >
                email
              </i>
            </div>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <span
    class="navigation group horizontal"
  >
    <button
      class="wrapper wrapper fill secondary medium left isDisabled"
      disabled=""
      id="prev-btn"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_left
      </i>
    </button>
    <button
      class="wrapper wrapper fill secondary medium right"
      id="next-btn"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_right
      </i>
    </button>
  </span>
</div>
`;
